--- a/config.json
+++ b/config.json
@@ -81,6 +81,7 @@
 
         "tensorboard": true
     }, 
+    "use_TA": false,
     "TA": {
         "tc_path": "./pretrained_models/cityscapes_best.pth",
         "tc_arch": "models.deeplabv3.DeepWV3Plus",
