--- a/config.json
+++ b/config.json
@@ -31,20 +31,20 @@
             "batch_size": 16,
             "shuffle": true,
             "validation_split": 0.0,
-            "num_workers": 2,
+            "num_workers": 0,
             "split": "train",
             "mode": "fine",
             "target_type": "semantic"
         }
     },
     "val_data_loader": {
-        "type": "CityScapesDataloader",
+        "type": "CityscapesDataloader",
         "args":{
             "data_dir": "data/",
             "batch_size": 16,
             "shuffle": false,
             "validation_split": 0,
-            "num_workers": 2,
+            "num_workers": 0,
             "split": "val",
             "mode": "fine",
             "target_type": "semantic"
