--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ wheels/
 .installed.cfg
 *.egg
 
-scripts/download_cityscapes.sh
+scripts/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
