--- a/cfg/iterative_knowledge_distillation_filter_pruning.json
+++ b/cfg/iterative_knowledge_distillation_filter_pruning.json
@@ -1,5 +1,5 @@
 {
-    "name": "KnowledgeDistillation",
+    "name": "Cityscapes_Iterative_Knowledge_Distillation_Filter_Pruning",
     "n_gpu": 1,
 
     "teacher": {
@@ -56,18 +56,15 @@
         }
     },
     "supervised_loss": {
-        "type": "FocalLoss",
+        "type": "CrossEntropyLoss2d",
         "args": {
-            "gamma": 2,
-            "reduction":  "mean",
             "ignore_index": 255
         }
     },
     "div_loss": {
-        "type": "MSELoss",
+        "type": "KLDivergenceLoss",
         "args": {
-            "reduction": "mean",
-            "num_classes": 19
+            "temperature": 1.1
         }
     },
     "kd_loss": {
@@ -92,14 +89,14 @@
         "save_dir": "saved/",
         "save_period": 1,
         "verbosity": 2,
-        
+
         "monitor": "min val_loss",
         "early_stop": 10,
         "accumulation_steps": 2,
         "log_step": 24,
 
         "tensorboard": true
-    }, 
+    },
     "KD": {
         "use": true
     },
@@ -109,8 +106,8 @@
             "padding": 2,
             "kernel_size": 3
         },
-        "compress_rate": 0.75,
-        "pruning_interval": 4,
+        "compress_rate": 0.5,
+        "pruning_interval": 2,
         "pruning_plan": [
             ["mod4.block6.convs.conv1"],
             ["mod4.block6.convs.conv2"],
@@ -137,7 +134,7 @@
             "max": 0.5
         },
         "gamma": {
-            "value": 1.15,
+            "value": 1.2,
             "anneal_rate": 1
         }
     }
