--- a/config.json
+++ b/config.json
@@ -7,6 +7,7 @@
         "args": {"num_classes": 19},
         "snapshot": "checkpoints/cityscapes_best.pth"
     },
+    "trainer": "TAKDPTrainer",
     "transforms": {
         "joint_transforms": {
             "crop_size": 720,
@@ -185,7 +186,7 @@
                 "name": "aspp.features.1.0",
                 "lr": 0.0001,
                 "compress_rate": 0.2,
-                "epoch": 2
+                "epoch": 3
             },
             {
                 "name": "aspp.features.2.0",
@@ -202,8 +203,8 @@
         ]
     },
     "teaching_assistant": {
-        "interval": 10,
-        "tol": 0.2
+        "interval": 2,
+        "tol": 0.02
     },
     "weight_scheduler": {
         "alpha": {
